# ZizaLend

./: .dockerignore  .editorconfig  .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LENDERS_DASHBOARD_DESIGN.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  UIUX Desktop.txt  UIUX Mobile First.txt  commitlint.config.js  docker-compose.staging.yml  docker-compose.yml  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  codeql.yml  commitlint.yml  dependency-review.yml  deploy-staging.yml  loadtest.yml
backend/: .env.example  README.md  eslint.config.mjs  package-lock.json  package.json  test_results.json  tsconfig.json
backend/migrations/: 1771691269865_initial-schema.js  1772000000000_webhook-subscriptions.js  1776000000006_add-interest-rate-to-loan-events.js  1778000000008_transaction-submissions.js  (+9 more)
backend/src/: app.ts  (+1 more)
contracts/: Cargo.toml  FUZZING_README.md  README.md  fuzz_campaign.sh  fuzz_invariants.md  fuzzing_article.md
contracts/tests/: Cargo.toml  integration_test.rs
contracts/tests/src/: lib.rs
docs/: DESIGN.md  DEVELOPMENT.md  ENVIRONMENT.md  LANDING_PAGE_DESIGN.md  SECURITY-MODEL.md  TESTING.md  TROUBLESHOOTING.md  contracts-ACCESS-CONTROL.md  deployed-contracts.md  scoring-model.md  webhooks.md
frontend/: .dockerignore  .env.example  Dockerfile  README.md  jest.config.js  jest.setup.ts  package-lock.json  package.json  playwright.config.ts
scripts/: .env.example  README.md  build.sh  check-env-docs.mjs  deploy.ts  dump-swagger.mjs  package-lock.json  package.json  tsconfig.json
(+254 files in other folders)
