[package]
name = "zizalend-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[dev-dependencies]
lending_pool = { path = "../lending_pool" }
loan_manager = { path = "../loan_manager" }
remittance_nft = { path = "../remittance_nft" }
multisig_governance = { path = "../multisig_governance" }
